<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_Parameters" Id="{0acdc32a-38d7-42ed-a023-5b5f43624fa6}">
    <Declaration><![CDATA[TYPE ST_Parameters :
STRUCT
	fCyclicTime : LREAL := 0.01; 
	stAnimationScaling : ST_AnimationScaling;
	stPistonRange : ST_PistonRange; 
	stCraneKinematics : ST_CraneKinematics;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>