<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="Outputs" Id="{6100726c-2a37-4206-8249-64f2ca6ce4cf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fCylinderVelocity : LREAL;
	fCylinderPosition : LREAL;
	bPistonUpperEndStop : BOOL; 
	bPistonLowerEndStop : BOOL; 
	eMode : E_Mode;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>