<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_PositionSimulator" Id="{a253bcaf-9e2f-4bc3-b317-59430c57f501}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_PositionSimulator
VAR_INPUT
	eMode : E_Mode;
	stParam : ST_Parameters;
	fTime : LREAL;
	fPositionReference : LREAL;
	fVelocityReference : LREAL;
	fInitialVelocity : LREAL;
	fInitialPosition : LREAL;
END_VAR
VAR_OUTPUT
	bRunning : BOOL;
	bPistonLowerEndStop : BOOL;
	bPistonUpperEndStop : BOOL;
	sPistonEndStopMessages : STRING; 
	fPositionRestricted : LREAL;
	stBoomAnimation : ST_RelativeMovement;
	stPistonAnimation : ST_RelativeMovement;
	fBoomAngleDeg : LREAL;
END_VAR
VAR
	fPosition : LREAL;
	fbPistonEndStop : FB_Softstop; 
	fBoomAngleRad : LREAL;
	fBoomAnimation : LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF  eMode = E_Mode.Manual THEN
	bRunning := FALSE;
	fPosition := fPositionReference;
ELSIF fTime > 0 AND eMode = E_Mode.Auto  THEN 
	bRunning := TRUE;
	fPosition := fVelocityReference * 1/2*(fTime*fTime) + fInitialVelocity * fTime + fInitialPosition;
ELSE
	bRunning := FALSE;
	fPosition := 0.0;
END_IF

// Softstop
fbPistonEndStop(
	fInputValue := fPosition,
	fNegDirLimit := stParam.stPistonRange.fPistonPosMin,
	fPosDirLimit := stParam.stPistonRange.fPistonPosMax,
	bEndStopNegDir => bPistonLowerEndStop,
	bEndStopPosDir => bPistonUpperEndStop,
	sEndStopMessage => sPistonEndStopMessages,
	fOutputValue => fPositionRestricted
);

// Convert Piston Displacement to Boom Angle
fBoomAngleRad := F_PistonDisplacementToBoomAngle(xCyl := fPositionRestricted);
fBoomAngleDeg := F_RadToDeg(fRad := fBoomAngleRad);

// Piston Animation
stPistonAnimation.pt1_y := LREAL_TO_INT(fPositionRestricted * stParam.stAnimationScaling.fPistonScale);

// Boom Animation
fBoomAnimation := F_BoomAnimation(
	fScale := stParam.stAnimationScaling.fBoomScale,
	fBoomAngle := fBoomAngleRad,
	fBoomLength := stParam.stCraneKinematics.fBoomLength,
	fBoomTipX => stBoomAnimation.pt1_x,
	fBoomTipY => stBoomAnimation.pt1_y
);]]></ST>
    </Implementation>
    <LineIds Name="FB_PositionSimulator">
      <LineId Id="10" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="105" Count="1" />
      <LineId Id="104" Count="0" />
      <LineId Id="12" Count="1" />
      <LineId Id="108" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="19" Count="3" />
      <LineId Id="62" Count="3" />
      <LineId Id="23" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="90" Count="1" />
      <LineId Id="93" Count="0" />
      <LineId Id="67" Count="2" />
      <LineId Id="89" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="72" Count="6" />
    </LineIds>
  </POU>
</TcPlcObject>